# tui

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
architecture/: index.html
changelog/: index.html
docs/: api.md  architecture.md  changelog.md  index.md
qualdatan_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
search/: search_index.json
src/: cli.py
src/qualdatan_tui/: __init__.py  app.py  console.py
